# libremo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.bat  run.cmd  run.sh
.github/workflows/: build.yml  ci.yml  run.yml
ci/: build.cmd  build.sh  coverage.cmd  coverage.sh  example.cmd  example.sh  prebuild.cmd  prebuild.sh  stresstest.cmd  stresstest.sh  test.bat  test.sh
example/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  dynamic_call.h  endpoint.h  error.h  function.cpp  function.h  item.cpp  item.h  local_endpoint.cpp  local_endpoint.h  local_endpoint.tpp.h  logger.cpp  logger.h  packet.cpp  packet.h  reader.cpp  reader.h  recycling.h  remo.cpp  remo.h  remote_endpoint.cpp  remote_endpoint.h  remote_endpoint.tpp.h  system.h  types.cpp  types.h  writer.cpp  writer.h
src/l0_system/: endianness.cpp  endianness.h  error.cpp  error.h  logger.cpp  logger.h  socket.cpp  socket.h  system.cpp  system.h  types.cpp  types.h  worker.cpp  worker.h
src/l1_transport/: buffer.cpp  buffer.h  channel.cpp  channel.h  packet.cpp  packet.h  reader.cpp  reader.h  transport.cpp  transport.h  url.cpp  url.h  writer.cpp  writer.h
src/l1_transport/tcp/: tcp-channel.cpp  tcp-channel.h  tcp-transport.cpp  tcp-transport.h
src/l3_rpc/: dynamic_call.h  endpoint.cpp  endpoint.h  function.cpp  item.cpp  item.h  local_endpoint.cpp  remote_endpoint.cpp  remote_endpoint.h  remote_endpoint.tpp.h
src/utils/: active.cpp  active.h  async.cpp  async.h  colors.cpp  colors.h  contracts.h  likely.h  list.cpp  list.h  logger.cpp  logger.h  recycling.h  settings.cpp  settings.h  timer.cpp  timer.h  utils.cpp  utils.h
template/: myclass.cpp  myclass.h
test/: CMakeLists.txt  example_add.cpp  example_subtract.cpp  failure.test.cpp  integration.test.cpp  serialization.test.cpp  stress.py  test.h
test/l0_system/: logger.test.cpp  socket.test.cpp
test/l1_transport/: transport.test.cpp  url.test.cpp
test/utils/: active.test.cpp  list.test.cpp  timer.test.cpp
